crates/gfm-syntax/tests/snapshots/indented_code_blocks/example_77.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  WhiteSpace: "    " [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  IndentedCodeBlock [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
    Word: "a" [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
    WhiteSpace: " " [ offsets: 5, position: ( line: 0, col: 5 ) ] ]
    Word: "simple" [ offsets: 6, position: ( line: 0, col: 6 ) ] ]
    LineEnding: "\n      " [ offsets: 12, position: ( line: 0, col: 12 ) ] ]
    Word: "indented" [ offsets: 19, position: ( line: 1, col: 0 ) ] ]
    WhiteSpace: " " [ offsets: 27, position: ( line: 1, col: 8 ) ] ]
    Word: "code" [ offsets: 28, position: ( line: 1, col: 9 ) ] ]
    WhiteSpace: " " [ offsets: 32, position: ( line: 1, col: 13 ) ] ]
    Word: "block" [ offsets: 33, position: ( line: 1, col: 14 ) ] ]
  Eof: "\0" [ offsets: 38, position: ( line: 1, col: 19 ) ] ]
