crates/gfm-syntax/tests/snapshots/indented_code_blocks/example_81.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  WhiteSpace: "    " [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  IndentedCodeBlock [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
    Word: "chunk1" [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
    ParaBreak: "\n\n    " [ offsets: 10, position: ( line: 0, col: 10 ) ] ]
    Word: "chunk2" [ offsets: 16, position: ( line: 2, col: 0 ) ] ]
    ParaBreak: "\n  \n " [ offsets: 22, position: ( line: 2, col: 6 ) ] ]
    ParaBreak: "\n \n    " [ offsets: 27, position: ( line: 4, col: 0 ) ] ]
    Word: "chunk3" [ offsets: 34, position: ( line: 6, col: 0 ) ] ]
  Eof: "\0" [ offsets: 40, position: ( line: 6, col: 6 ) ] ]
