crates/gfm-syntax/tests/snapshots/indented_code_blocks/example_83.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Paragraph [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    Inline [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
      Word: "Foo" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    LineEnding: "\n    " [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    Inline [ offsets: 8, position: ( line: 1, col: 0 ) ] ]
      Word: "bar" [ offsets: 8, position: ( line: 1, col: 0 ) ] ]
  Eof: "\0" [ offsets: 11, position: ( line: 1, col: 3 ) ] ]
