crates/gfm-syntax/tests/snapshots/indented_code_blocks/example_86.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  WhiteSpace: "        " [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  IndentedCodeBlock [ offsets: 8, position: ( line: 0, col: 8 ) ] ]
    Word: "foo" [ offsets: 8, position: ( line: 0, col: 8 ) ] ]
    LineEnding: "\n    " [ offsets: 11, position: ( line: 0, col: 11 ) ] ]
    Word: "bar" [ offsets: 16, position: ( line: 1, col: 0 ) ] ]
  Eof: "\0" [ offsets: 19, position: ( line: 1, col: 3 ) ] ]
