crates/gfm-syntax/tests/snapshots/indented_code_blocks/example_88.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  WhiteSpace: "    " [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  IndentedCodeBlock [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
    Word: "foo" [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
    WhiteSpace: "  " [ offsets: 7, position: ( line: 0, col: 7 ) ] ]
  Eof: "\0" [ offsets: 9, position: ( line: 0, col: 9 ) ] ]
